--- a/docs/references.bib
+++ b/docs/references.bib
@@ -66,6 +66,80 @@
 }
 
 
+@article{anKeyplayerPackageLocating2016,
+  title = {Keyplayer: {{An R Package}} for {{Locating Key Players}} in {{Social Networks}}},
+  shorttitle = {Keyplayer},
+  author = {An, Weihua and Liu, Yu-Hsin},
+  year = {2016},
+  volume = {8},
+  pages = {257},
+  issn = {2073-4859},
+  doi = {10.32614/RJ-2016-018},
+  url = {https://journal.r-project.org/archive/2016/RJ-2016-018/index.html},
+  urldate = {2021-01-22},
+  abstract = {Interest in social network analysis has exploded in the past few years, partly thanks to the advancements in statistical methods and computing for network analysis. A wide range of the methods for network analysis is already covered by existent R packages. However, no comprehensive packages are available to calculate group centrality scores and to identify key players (i.e., those players who constitute the most central group) in a network. These functionalities are important because, for example, many social and health interventions rely on key players to facilitate the intervention. Identifying key players is challenging because players who are individually the most central are not necessarily the most central as a group due to redundancy in their connections. In this paper we develop methods and tools for computing group centrality scores and for identifying key players in social networks. We illustrate the methods using both simulated and empirical examples. The package keyplayer providing the presented methods is available from Comprehensive R Archive Network (CRAN).},
+  file = {P\:\\ZoteroDB\\An_Liu\\an_liu_2016_keyplayer.pdf},
+  journal = {The R Journal},
+  language = {en},
+  number = {1}
+}
+
+
+@book{kadushinUnderstandingSocialNetworks2012,
+  title = {Understanding {{Social Networks}}: {{Theories}}, {{Concepts}}, and {{Findings}}},
+  author = {Kadushin, Charles},
+  year = {2012},
+  publisher = {{Oxford University Press}},
+  address = {{New York, NY}},
+  file = {P\:\\ZoteroDB\\Kadushin\\kadushin_2012_understanding social networks.epub},
+  isbn = {978-0-19-537947-1},
+  keywords = {Social Network Analysis}
+}
+
+
+@article{robinsIntroductionExponentialRandom2007,
+  title = {An Introduction to Exponential Random Graph (P*) Models for Social Networks},
+  author = {Robins, Garry and Pattison, Pip and Kalish, Yuval and Lusher, Dean},
+  year = {2007},
+  month = may,
+  volume = {29},
+  pages = {173--191},
+  issn = {0378-8733},
+  doi = {10.1016/j.socnet.2006.08.002},
+  url = {http://www.sciencedirect.com/science/article/pii/S0378873306000372},
+  urldate = {2019-11-18},
+  abstract = {This article provides an introductory summary to the formulation and application of exponential random graph models for social networks. The possible ties among nodes of a network are regarded as random variables, and assumptions about dependencies among these random tie variables determine the general form of the exponential random graph model for the network. Examples of different dependence assumptions and their associated models are given, including Bernoulli, dyad-independent and Markov random graph models. The incorporation of actor attributes in social selection models is also reviewed. Newer, more complex dependence assumptions are briefly outlined. Estimation procedures are discussed, including new methods for Monte Carlo maximum likelihood estimation. We foreshadow the discussion taken up in other papers in this special edition: that the homogeneous Markov random graph models of Frank and Strauss [Frank, O., Strauss, D., 1986. Markov graphs. Journal of the American Statistical Association 81, 832\textendash 842] are not appropriate for many observed networks, whereas the new model specifications of Snijders et al. [Snijders, T.A.B., Pattison, P., Robins, G.L., Handock, M. New specifications for exponential random graph models. Sociological Methodology, in press] offer substantial improvement.},
+  file = {G\:\\ZoteroDB_local\\Robins et al\\robins et al_2007_an introduction to exponential random graph (p) models for social networks.pdf;C\:\\Users\\jared\\Documents\\ZoteroSys\\storage\\VNELMYML\\S0378873306000372.html},
+  journal = {Social Networks},
+  keywords = {Exponential random graph models,models,Notes,QE Printed,Read,Social Network Analysis,Statistical models for social networks},
+  language = {en},
+  number = {2},
+  series = {Special {{Section}}: {{Advances}} in {{Exponential Random Graph}} (P*) {{Models}}}
+}
+
+
+@article{robinsRecentDevelopmentsExponential2007,
+  title = {Recent Developments in Exponential Random Graph (P*) Models for Social Networks},
+  author = {Robins, Garry and Snijders, Tom and Wang, Peng and Handcock, Mark and Pattison, Philippa},
+  year = {2007},
+  month = may,
+  volume = {29},
+  pages = {192--215},
+  issn = {0378-8733},
+  doi = {10.1016/j.socnet.2006.08.003},
+  url = {http://www.sciencedirect.com/science/article/pii/S0378873306000384},
+  urldate = {2019-11-18},
+  abstract = {This article reviews new specifications for exponential random graph models proposed by Snijders et al. [Snijders, T.A.B., Pattison, P., Robins, G.L., Handcock, M., 2006. New specifications for exponential random graph models. Sociological Methodology] and demonstrates their improvement over homogeneous Markov random graph models in fitting empirical network data. Not only do the new specifications show improvements in goodness of fit for various data sets, but they also help to avoid the problem of near-degeneracy that often afflicts the fitting of Markov random graph models in practice, particularly to network data exhibiting high levels of transitivity. The inclusion of a new higher order transitivity statistic allows estimation of parameters of exponential graph models for many (but not all) cases where it is impossible to estimate parameters of homogeneous Markov graph models. The new specifications were used to model a large number of classical small-scale network data sets and showed a dramatically better performance than Markov graph models. We also review three current programs for obtaining maximum likelihood estimates of model parameters and we compare these Monte Carlo maximum likelihood estimates with less accurate pseudo-likelihood estimates. Finally, we discuss whether homogeneous Markov random graph models may be superseded by the new specifications, and how additional elaborations may further improve model performance.},
+  file = {G\:\\ZoteroDB_local\\Robins et al\\robins et al_2007_recent developments in exponential random graph (p) models for social networks.pdf;C\:\\Users\\jared\\Documents\\ZoteroSys\\storage\\WBCMWPZN\\S0378873306000384.html},
+  journal = {Social Networks},
+  keywords = {* models,Exponential random graph models,Social Network Analysis,Statistical models for social networks},
+  language = {en},
+  number = {2},
+  series = {Special {{Section}}: {{Advances}} in {{Exponential Random Graph}} (P*) {{Models}}}
+}
+
+
+
 
 
 
