--- a/docs/sna_lecture_site.Rmd
+++ b/docs/sna_lecture_site.Rmd
@@ -1,7 +1,7 @@
 ---
 title: Network Analysis in R
-author: "[Jared Joseph](https://jnjoseph.com/)"
-date: January 13, 2020
+author: "Jared Joseph"
+date: February 24, 2021
 output: rmdformats::readthedown
 bibliography: references.bib
 link-citations: TRUE
@@ -39,17 +39,20 @@ net_url7 = "https://raw.githubusercontent.com/Epsian/sna_lecture/main/resources/
 net_url8 = "https://raw.githubusercontent.com/Epsian/sna_lecture/main/resources/page_rank.jpg"
 net_url9 = "https://raw.githubusercontent.com/Epsian/sna_lecture/main/resources/infrastructure_net.jpg"
 net_url10 = "https://raw.githubusercontent.com/Epsian/sna_lecture/main/resources/terror_net.png"
+
+# 2mode
+net_url11 = "https://raw.githubusercontent.com/Epsian/sna_lecture/main/resources/2mode.png"
 ```
 
 # Overview
 
-*write summary here*
+This reader will introduce the theoretical and logistical underpinnings of network analysis. It will define what networks are, their limitations, and their use cases. It will then cover some of the most commonly used network measures, what they mean, and how to generate them.
 
 ## While you wait
 
--   Make sure you have installed all the packages you will need: `install.packages(c("statnet", "igraph", "intergraph"))`
+-   Make sure you have installed all the packages you will need: `install.packages(c("statnet", "visNetwork"))`
 -   *DOWNLOAD DATA*
--   Play around with <https://oracleofbacon.org/>
+-   Play around with the [Oracle of Bacon](https://oracleofbacon.org/)
 
 ## Learning Objectives
 
@@ -75,7 +78,7 @@ By the end of this class meeting, students should be able to:
 
 You are all most likely familiar now with tabular data; rows and columns containing information. It looks like this:
 
-| Person                               | Name | Age | Widgits |
+| Person                               | Name | Age | Widgets |
 |--------------------------------------|:-----|:----|:--------|
 | ![](`r net_url1`){width="10%"} | J    | 30  | 1       |
 | ![](`r net_url2`){width="10%"} | Y    | 21  | 3       |
@@ -87,7 +90,7 @@ While this is a tidy way to store data, it artificially atomizes or separates ma
 ```{r echo=FALSE, out.width='100%'}
 nodes = data.frame(id = 1:4, 
                     shape = "image",
-                    title = c("<p style='color: black;'>Name: J<br>Age: 30<br>Widgits: 1</p>", "<p style='color: black;'>Name: Y<br>Age: 21<br>Widgits: 3</p>", "<p style='color: black;'>Name: G<br>Age: 32<br>Widgits: 4</p>", "<p style='color: black;'>Name: Z<br>Age: 48<br>Widgits: 8</p>"),
+                    title = c("<p style='color: black;'>Name: J<br>Age: 30<br>Widgets: 1</p>", "<p style='color: black;'>Name: Y<br>Age: 21<br>Widgets: 3</p>", "<p style='color: black;'>Name: G<br>Age: 32<br>Widgets: 4</p>", "<p style='color: black;'>Name: Z<br>Age: 48<br>Widgets: 8</p>"),
                     image = c(net_url1, net_url2, net_url3, net_url4))
 
 edges = data.frame(from = c(2,4,3,3), to = c(1,2,4,2), label = c("Siblings", "Student", "Friends", "Parent"))
@@ -204,7 +207,7 @@ Now that we have our tools loaded, let's create out first network. We'll use the
 
 We are going to turn the attributes file and edgelist into a `statnet` network object. A network object is a special kind of list in R. It is formatted in a way that the other `statnet` functions expect. While you could edit it like a normal list, it is highly recommended you use the other `statnet` functions to manipulate this object to make sure you don't break any of the data expectations.
 
-We'll use the `network` function to create our network object. Before we create it, we will sort our attributes file alphabetically. This is super important, as the network object will automatically sort things itself. **If we do not sort our attributes dataframe to match, all of our measure later will be misaligned!**
+We'll use the `network` function to create our network object. Before we create it, we will sort our attributes file alphabetically. This is super important, as the network object will automatically sort things itself. **If we do not sort our attributes dataframe to match, all of our measures later will be misaligned!**
 
 ```{r}
 # sort your attributes frame alphabetically. Super important!
@@ -290,6 +293,16 @@ If we remove this node, the network changes in a major way! Imagine these nodes 
 ```{r net_data_vulnerability_missing, echo=FALSE}
 # plot
 visNetwork(nodes = .vul_att[.vul_att$color != "green",], edges = .vul_edge) %>% visInteraction(zoomView = FALSE)
+```
+
+## Projected Networks
+
+Often, you will not have individual level network data, but you will have data on group membership. For example, if you wanted to map the social networks of student, but don't know who they actually hand around with, you may be able to use class rosters to build an approximate network. This is call a *bipartite network*, *two-mode*, or *projected network*. You can see an example below.
+
+In this figure there are two kinds of nodes, students and classes. You can "collapse" this into a student network by assuming every student connected to a class is connected to each other. The same is true with classes, such that classes are related to each other if a single student is enrolled in both. This assumption may not always be correct, and you need to take care if you are going to make it in your research. If a calss has 300 students, it is most likely not correct to assume every student knows every other student in that class.
+
+```{r echo=FALSE, out.width= "100%"}
+knitr::include_graphics(net_url11)
 ```
 
 # Graph Level Properties
@@ -513,17 +526,33 @@ There are several ways to interact with network data in R. Thus far we have been
 
 ### statnet
 
-`statnet` is one of the two largest network packages in R. It allows you to create network objects and generate the network measures we've been looking at this far. `statnet`'s claim to fame however is it's ability to run network simulations, called *exponential random graph models (ERGMs)*. These models allow you to keep some aspect of a network constant and generate random networks that fit your specifications. This can help you highlight one structural aspect of a network and prove that, all else being random, it is important. To learn more about ERGMs, see [@robinsIntroductionExponentialRandom2007; @robinsRecentDevelopmentsExponential2007]
+`statnet` is one of the two largest network packages in R. It allows you to create network objects and generate the network measures we've been looking at this far. `statnet`'s claim to fame however is it's ability to run network simulations, called *exponential random graph models (ERGMs)*. These models allow you to keep some aspect of a network constant and generate random networks that fit your specifications. This can help you highlight one structural aspect of a network and prove that, all else being random, it is important. To learn more about ERGMs, see [@robinsIntroductionExponentialRandom2007; @robinsRecentDevelopmentsExponential2007]. [Learn more on the statnet website.](https://statnet.org/)
 
 ### igraph
 
-`igraph` is the other big network package in R. 
+`igraph` is the other big network package in R. It has more network measures than `statnet`, but less robust simulation capabilities. While the same network concepts you've learned with `statnet` will help you understand all networks, the code syntax for `igraph` is different, so you can't use the two tools interchangeably. Notably, some functions are named the same in `statnet` and `igraph`, so it is advised not to load both at the same time. [Learn more on the igraph website.](https://igraph.org/r/)
+
+### intergraph
+
+`intergraph` is a utility package in R to convert between `statnet` and `igraph` network objects. This means you can prepare your data in your package of choice, then convert your network and use what tools you need from the other package.
+
+### tidygraph
+
+`tidygraph` is a relatively new tool in R, built to use tidyverse syntax. It can do many of the same basic network analyses of the two older packages, but lacks the variety of `igraph` or the simulation capability of `statnet`. [Learn more on the tidygraph website.](https://tidygraph.data-imaginist.com/)
 
 ## Network Visualization
+
+### Built-in
+
+While we avoided it today, all network packages have built in visualization capabilities that can look nice if you work on it. The advantage of these is that you can use the network objects themselves to pull attributes from the networks for your plots (e.g. pull degree centrality for node size).
 
 ### visNetwork
 
 `visNetwork` can make some nice interactive network visualizations with relatively simple code. This is great for learning and for exploring networks interactively. However, it does have significant downsides. For one, you have to keep separate dataframes for your edges and attributes as it cannon run directly on network objects. Most importantly it cannot produce static network images! You will most likely need more static plots than interactive ones. If you can only dig deeply into one tool, this one may not be the best to specialize in.
+
+### ggraph
+
+`ggraph` uses ggplot syntax to plot networks. There are several packages that do this in various stages of development. To my understanding, `ggraph` is the most recent incarnation still under active development. [Learn more of the ggraph website.](https://ggraph.data-imaginist.com/)
 
 ------------------------------------------------------------------------
 
